# MRS_RPESTM

./: CMakeLists.txt  README.md  package.xml
data/: test.mat
data/.ipynb_checkpoints/: plot-checkpoint.ipynb
data/Hardware/GT/truedata/: .~lock.sc1_3(modified).xlsx#  sc1_1.xlsx  sc1_3(modified).xlsx  sc2_1.xlsx  sc2_3(modified).xlsx  sc3_1.xlsx  sc4_1.xlsx
data/Hardware/NLS/: nlstestsc1_2.csv
data/Hardware/NLS/SlidingFilter/: test3.csv  test4.csv
data/withOutlier/case0/outlier10%/: ceresCauchy2.0.csv  ceresHuber8.0.csv  ceresNull.csv
data/withOutlier/case0/outlier20%/: ceresArctan10.0.csv  ceresCauchy2.0.csv  ceresHuber8.0.csv  ceresNull.csv  ceresTukey8.0.csv
data/withOutlier/case0/outlier30%/: ceresArctan10.0.csv  ceresCauchy20.0.csv  ceresHuber10.0.csv  ceresNull.csv  ceresTukey8.0.csv
data/withOutlier/case0/outlier40%/: ceresArctan10.0.csv  ceresCauchy20.0.csv  ceresHuber10.0.csv  ceresNull.csv  ceresTukey8.0.csv
data/withOutlier/case0/outlier50%/: ceresArctan10.0.csv  ceresCauchy20.0.csv  ceresHuber10.0.csv  ceresNull.csv  ceresTukey8.0.csv
data/withOutlier/case3/outlier10%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case3/outlier20%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case3/outlier30%/: arctan3.0.csv  cauchy0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case3/outlier40%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case3/outlier50%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case4/outlier10%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withOutlier/case4/outlier20%/: arctan3.0.csv  cauchy0.5.csv  huber0.5.csv  l2norm.csv  tukey3.0.csv
data/withoutOutlier/Nls/: case1.csv  case2.csv  case3.csv  case4.csv
data/withoutOutlier/slidingNls/: case1-2.csv  case1.csv  case2-2.csv  case2.csv  case3-2.csv  case3.csv  case4-2.csv  case4.csv
data/withoutOutlier/slidingNlsFiltering/: case1.csv  case2.csv  case3.csv  case4.csv  test.csv  test3.csv
include/: csvparser.h  kalman_filter_node.h  matplotlibcpp.h  types.h
launch/: kalman.launch  one_robot.launch  robots.launch  rosbag.launch  simulation.launch  simulation_kalman.launch  turtlebot_kalman.launch
msg/: SyncMsg.msg
scripts/: GenerateData.py  RMSE_HW.ipynb  data.csv  get_local_se2_pose.py  move_multiple_turtlebots.py  move_turtlebot.py  quat_to_euler.py  rmse.txt
scripts/.ipynb_checkpoints/: RMSE-checkpoint.ipynb
src/: 2024-01-11-16-49-02.bag  mat_to_csv.py  my_kf_integ_node.cpp  my_kf_node.cpp  my_nls_node.cpp  my_nls_node_varyingi.cpp  my_sliding_filtering_nls_node.cpp  my_sliding_nls_node.cpp  plot.py  plot_node.cpp  pub_CSV.cpp  relative_measrement.cpp  relative_plot.py  scenario1.py  scenario2.py  scenario3.py  scenario4.py  timesync.cpp  tra.py  uwb_nls_rho.cpp  uwb_sub.cpp
src/example_matplotlib/: CMakeLists.txt
src/example_matplotlib/include/: matplotlibcpp.h
src/example_matplotlib/src/: main.cpp
test/: CMakeLists.txt  MyArray.cpp  Untitled.ipynb  ekf_state_estimation.cpp
test/include/: MyArray.h  kalman_filter.h  types.h
(+165 files in other folders)
